# ansible-role-zuul

./: .gitreview  .travis.yml  .zuul.yaml  README.md  README.rst  bindep.txt  other-requirements.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
defaults/: main.yaml
doc/: requirements.txt
doc/source/: conf.py
files/etc/default/: zuul-executor  zuul-launcher  zuul-merger  zuul-scheduler  zuul-server
files/etc/init.d/: zuul-executor  zuul-launcher  zuul-merger  zuul-merger.init  zuul-scheduler  zuul-server  zuul-server.init
files/etc/sysconfig/: zuul-executor  zuul-launcher  zuul-merger  zuul-scheduler  zuul-server
files/etc/systemd/system/: zuul-executor.service  zuul-executor.service.centos-7  zuul-fingergw.service  (+12 more)
files/etc/zuul/: gearman-logging.conf  launcher-logging.conf  merger-logging.conf  server-logging.conf  zuul.conf
handlers/: main.yaml
meta/: main.yml
molecule/default/: Dockerfile.j2  molecule.yml
molecule/tests/: conftest.py  test_role.py
tasks/: config.yaml  install.yaml  main.yaml  pre.yaml  service.yaml
tasks/install/: debian.yaml  git.yaml  pip.yaml  redhat.yaml
tasks/service/: redhat.yaml
templates/: zuul.conf.j2
templates/etc/zuul/: fingergw-logging.conf  gearman-logging.conf  main.yaml  scheduler-logging.conf  zuul.conf  zuul.conf.j2
tests/: collect-logs.yaml  inventory  test.yaml  test001.yaml  test002.yaml
tests/playbooks/: post.yaml  pre.yaml  run.yaml
tools/: test-setup.sh
vars/: Debian.yaml  RedHat.yaml  centos-7.yaml  redhat.yaml  ubuntu-trusty.yaml  ubuntu-xenial.yaml  ubuntu.yaml
(+16 files in other folders)
